--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        
+        <header>
+            <h1>Title</h1>
+            <p>Caption</p>
+        </header>
+        <navbar>
+            <a href="about:blank">Feed</a>
+            <a href="about:blank">Notifications</a>
+            <a href="about:blank">Profiles</a>
+            <a href="about:blank">Settings</a>
+        </navbar>
+        </div>
     </body>
 </html>
