--- a/index.html
+++ b/index.html
@@ -4,15 +4,47 @@
     </head>
     <body>
         <header>
-            <h1>Title</h1>
-            <p>Caption</p>
+            <h1>Website Title</h1>
+            <p>Page Subtitle</p>
         </header>
         <navbar>
-            <a href="about:blank">Feed</a>
-            <a href="about:blank">Notifications</a>
-            <a href="about:blank">Profiles</a>
-            <a href="about:blank">Settings</a>
+            <a href="">Home</a>
+            <a href="">Feed</a>
         </navbar>
+        <div class="row">
+            <div class="column side">
+                <div class="card profile">
+                    <img src="https://via.placeholder.com/500">
+                    <h2>About me</h2>
+                    <p>Some text about me. Lorem ipsum yadda yadda yadda.</p>
+                </div>
+                <div class="card">
+                    <h2>Some links</h2>
+                    <ul>
+                        <li><a href="">This is a link.</a></li>
+                        <li><a href="">This is another link.</a></li>
+                        <li><a href="">This is one more link.</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="column middle">
+                <div class="card">
+                    <h2>Main Content</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="card">
+                    <h2>Main Content</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            <div class="column side">
+                <div class="card">
+                    <h2>Images I like</h2>
+                    <p>I like these images.</p>
+                    <img src="https://via.placeholder.com/800x600">
+                    <img src="https://via.placeholder.com/1080x1920">
+                </div>
+            </div>
         </div>
     </body>
 </html>
